@startuml

package com.gelvt.gofdp.decorator{

    abstract class InputStream <<输入流的抽象>> {
        + {abstract} read(): int
    }

    class FilterInputStream <<过滤流>> {
        # in: InputStream
        # FilterInputStream(in: InputStream)
        + read(): int
    }

    class BufferedInputStream <<带缓冲的输入流>>{
        + BufferedInputStream(in: InputStream)
        + read(): int
    }

    class CheckedInputStream <<带计算校验和功能的输入流>> {
        - cksum: Checksum
        + CheckedInputStream(in: InputStream, cksum: Checksum)
        + read(): int
        + getChecksum(): Checksum
    }

    class ByteArrayInputStream <<字节数组输入流>> {
        # buf: byte[]
        # pos: int
        # count: int
        + ByteArrayInputStream(buf: byte[])
        + read(): int
    }

    InputStream <|-- FilterInputStream
    FilterInputStream <|-- BufferedInputStream
    FilterInputStream <|-- CheckedInputStream
    FilterInputStream o--> InputStream
    InputStream <|-- ByteArrayInputStream
}

package com.gelvt.gofdp{
    class App <<Client>>{
        + void main(String[] args)
    }
}

App ..> InputStream


footer
<font size="20" color="red">http://www.bughui.com</font>
endfooter

@enduml